--- a/wildcatweb/src/features/settings/styles/ReadingLevelSettings.module.css
+++ b/wildcatweb/src/features/settings/styles/ReadingLevelSettings.module.css
@@ -63,6 +63,19 @@
 .optionIcon {
     font-size: 2.5rem;
     margin-bottom: var(--spacing-2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.complexityIcon {
+    width: 32px;
+    height: 32px;
+    color: var(--button-default-text);
+}
+
+.activeOption .complexityIcon {
+    color: var(--button-selected-text);
 }
 
 .optionLabel {
