--- a/wildcatweb/src/features/commandPanel/instructions/styles/InstructionDescriptionPanel.module.css
+++ b/wildcatweb/src/features/commandPanel/instructions/styles/InstructionDescriptionPanel.module.css
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-right: var(--spacing-4);
+    margin-right: var(--spacing-1);
     overflow: visible; /* Allow overflow to ensure proper display */
 }
 
@@ -87,8 +87,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 44px;
-    min-height: 44px;
+    min-width: 40px;
+    min-height: 40px;
     position: relative;
 }
 
@@ -98,7 +98,7 @@
     align-items: center;
     justify-content: center;
     min-width: 20px;
-    min-height: 44px;
+    min-height: 40px;
     margin: 0 var(--spacing-1);
 }
 
@@ -146,7 +146,7 @@
 }
 
 .pairIcon {
-    height: 36px; /* Fixed height for icon area */
+    height: 28px; /* Fixed height for icon area */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -173,8 +173,7 @@
     border: none;
     cursor: pointer;
     color: var(--color-text);
-    padding: var(--spacing-1);
-    margin-left: var(--spacing-2);
+    margin-left: var(--spacing-1);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -210,7 +209,9 @@ body[data-theme="retro"] .separatorIcon {
     color: var(--color-text);
 }
 
-
+body[data-theme="retro"]  .conceptIcon {
+    color: var(--color-primary-high);
+}
 
 body[data-theme="pastel"] .panel {
     background-color: var(--color-background);
