--- a/wildcatweb/src/features/codeTrack/styles/CodingTrack.module.css
+++ b/wildcatweb/src/features/codeTrack/styles/CodingTrack.module.css
@@ -50,12 +50,35 @@
     height: 150px;
 }
 
-.motorBorder {
+.directionArrow {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    color: var(--color-text);
+    opacity: 0.1;
+    z-index: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(1.1);
+}
+
+.directionArrow svg {
+    width: 100%;
+    height: 100%;
+}
+
+.motorBorder {
+    position: absolute;
+    background-color: var(--color-background);
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .motorRotor {
